@@ -1,3 +1,4 @@
+from zope.i18n import translate
 from AccessControl import Unauthorized
 from Products.CMFCore.utils import getToolByName
 from Products.Poi.browser.interfaces import IResponseAdder
@@ -11,8 +12,6 @@ from plone.memoize.view import memoize
 from Products.Archetypes.atapi import DisplayList
 from Products.Poi.config import DEFAULT_ISSUE_MIME_TYPE
 from Products.CMFPlone import PloneMessageFactory as PMF
-from Products.PageTemplates.GlobalTranslationService import \
-    getGlobalTranslationService
 from Products.Poi import PoiMessageFactory as _
 from Products.Poi import permissions
 from Products.statusmessages.interfaces import IStatusMessage
@@ -181,10 +180,9 @@ class Base(BrowserView):
         """
         status = IStatusMessage(self.request)
         response_id = self.request.form.get('response_id', None)
-        ts = getGlobalTranslationService()
         if response_id is None:
             msg = _(u"No response selected.")
-            msg = ts.translate('Poi', msg, context=self.context)
+            msg = translate(msg, 'Poi', context=self.context)
             status.addStatusMessage(msg, type='error')
             return -1
         else:
@@ -193,13 +191,13 @@ class Base(BrowserView):
             except ValueError:
                 msg = _(u"Response id ${response_id} is no integer.",
                         mapping=dict(response_id=response_id))
-                msg = ts.translate('Poi', msg, context=self.context)
+                msg = translate(msg, 'Poi', context=self.context)
                 status.addStatusMessage(msg, type='error')
                 return -1
             if response_id >= len(self.folder):
                 msg = _(u"Response id ${response_id} does not exist.",
                         mapping=dict(response_id=response_id))
-                msg = ts.translate('Poi', msg, context=self.context)
+                msg = translate(msg, 'Poi', context=self.context)
                 status.addStatusMessage(msg, type='error')
                 return -1
             else:
@@ -375,7 +373,6 @@ class Create(Base):
         context = aq_inner(self.context)
         if not self.memship.checkPermission('Poi: Add Response', context):
             raise Unauthorized
-        ts = getGlobalTranslationService()
 
         response_text = form.get('response', u'')
         new_response = Response(response_text)
@@ -436,9 +433,8 @@ class Create(Base):
 
         if len(response_text) == 0 and not issue_has_changed:
             status = IStatusMessage(self.request)
-            ts = getGlobalTranslationService()
             msg = _(u"No response text added and no issue changes made.")
-            msg = ts.translate('Poi', msg, context=context)
+            msg = translate(msg, 'Poi', context=context)
             status.addStatusMessage(msg, type='error')
         else:
             # Apply changes to issue
@@ -477,16 +473,15 @@ class Save(Base):
         form = self.request.form
         context = aq_inner(self.context)
         status = IStatusMessage(self.request)
-        ts = getGlobalTranslationService()
         if not self.can_edit_response:
             msg = _(u"You are not allowed to edit responses.")
-            msg = ts.translate('Poi', msg, context=context)
+            msg = translate(msg, 'Poi', context=context)
             status.addStatusMessage(msg, type='error')
         else:
             response_id = form.get('response_id', None)
             if response_id is None:
                 msg = _(u"No response selected for saving.")
-                msg = ts.translate('Poi', msg, context=context)
+                msg = translate(msg, 'Poi', context=context)
                 status.addStatusMessage(msg, type='error')
             else:
                 response = self.folder[response_id]
@@ -496,7 +491,7 @@ class Save(Base):
                 response.rendered_text = None
                 msg = _(u"Changes saved to response id ${response_id}.",
                       mapping=dict(response_id=response_id))
-                msg = ts.translate('Poi', msg, context=context)
+                msg = translate(msg, 'Poi', context=context)
                 status.addStatusMessage(msg, type='info')
                 # Fire event.  We put the context in the descriptions
                 # so event handlers can use this fully acquisition
@@ -514,17 +509,16 @@ class Delete(Base):
     def __call__(self):
         context = aq_inner(self.context)
         status = IStatusMessage(self.request)
-        ts = getGlobalTranslationService()
 
         if not self.can_delete_response:
             msg = _(u"You are not allowed to delete responses.")
-            msg = ts.translate('Poi', msg, context=context)
+            msg = translate(msg, 'Poi', context=context)
             status.addStatusMessage(msg, type='error')
         else:
             response_id = self.request.form.get('response_id', None)
             if response_id is None:
                 msg = _(u"No response selected for removal.")
-                msg = ts.translate('Poi', msg, context=context)
+                msg = translate(msg, 'Poi', context=context)
                 status.addStatusMessage(msg, type='error')
             else:
                 try:
@@ -533,7 +527,7 @@ class Delete(Base):
                     msg = _(u"Response id ${response_id} is no integer so it "
                             "cannot be removed.",
                             mapping=dict(response_id=response_id))
-                    msg = ts.translate('Poi', msg, context=context)
+                    msg = translate(msg, 'Poi', context=context)
                     status.addStatusMessage(msg, type='error')
                     self.request.response.redirect(context.absolute_url())
                     return
@@ -541,13 +535,13 @@ class Delete(Base):
                     msg = _(u"Response id ${response_id} does not exist so it "
                             "cannot be removed.",
                             mapping=dict(response_id=response_id))
-                    msg = ts.translate('Poi', msg, context=context)
+                    msg = translate(msg, 'Poi', context=context)
                     status.addStatusMessage(msg, type='error')
                 else:
                     self.folder.delete(response_id)
                     msg = _(u"Removed response id ${response_id}.",
                             mapping=dict(response_id=response_id))
-                    msg = ts.translate('Poi', msg, context=context)
+                    msg = translate(msg, 'Poi', context=context)
                     status.addStatusMessage(msg, type='info')
         self.request.response.redirect(context.absolute_url())
 
@@ -566,10 +560,9 @@ class Download(Base):
             file = response.attachment
             if file is None:
                 status = IStatusMessage(request)
-                ts = getGlobalTranslationService()
                 msg = _(u"Response id ${response_id} has no attachment.",
                         mapping=dict(response_id=response_id))
-                msg = ts.translate('Poi', msg, context=context)
+                msg = translate(msg, 'Poi', context=context)
                 status.addStatusMessage(msg, type='error')
         if file is None:
             request.response.redirect(context.absolute_url())
